2010-03-11  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Simon Hausmann.

        Mac OS X: Use deployment target to determine whether memory tagging should be enabled
        https://bugs.webkit.org/show_bug.cgi?id=34888

        Use TARGETING_TIGER rather than BUILDING_ON_TIGER to determine the tags.

        * wtf/VMTags.h:

2010-03-11  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

        Reviewed by Simon Hausmann.

        The JSNative state was renamed to JSPrimitive. The new name better
        coresponds to the ECMAScript standard.

        Enum QScriptValuePrivate::States was renamed to State to obey Qt
        coding style rules ("States" name suggests that a state could
        mixed together with an other state using bitwise logic operators.

        [Qt] QScriptValuePrivate::States has naming issues
        https://bugs.webkit.org/show_bug.cgi?id=35968

        * qt/api/qscriptvalue_p.h:
        (QScriptValuePrivate::):
        (QScriptValuePrivate::QScriptValuePrivate):
        (QScriptValuePrivate::isBool):
        (QScriptValuePrivate::isNumber):
        (QScriptValuePrivate::isNull):
        (QScriptValuePrivate::isString):
        (QScriptValuePrivate::isUndefined):
        (QScriptValuePrivate::toString):
        (QScriptValuePrivate::toNumber):
        (QScriptValuePrivate::toBool):
        (QScriptValuePrivate::assignEngine):
        (QScriptValuePrivate::refinedJSValue):

2010-03-11  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY (Windows build fix).

        Add export.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-03-11  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY (Windows build fix).

        Add export.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2010-03-11  Gavin Barraclough  <barraclough@apple.com>

        Rubber stamped by Oliver Hunt.

        Remove nonsense comments used in development & commited in error.
